<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="editEmail">Email</string>
    <string name="pass">Password</string>
    <string name="menDaftar">Pendaftaran</string>
    <string name="InfoDaftar">Daftar</string>
    <string name="mskNama">Masukan Nama</string>
    <string name="mskEmail">Masukkan Email</string>
    <string name="mskPassword">Masukkan Password</string>
    <string name="rePassword">Masukkan Password</string>
    <string name="mskAlamat">Masukkan Alamat</string>
    <string name="lihatData">Lihat Data</string>
    <string name="editData">Edit Data</string>
    <string name="dataKontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailKontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">No Telepon</string>
</resources>